--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
     <!-- centered logo + title -->
     <img class="logo" src="https://i.postimg.cc/bwYsTGKt/The-unicorn-in-the-sky.png" alt="Fancy Pony logo" />
     <h1>Fancy Pony — Artwork Submission</h1>
+    <p style="text-align:center; max-width: 800px; margin: 0 auto 20px auto; font-size: 1.1em; line-height: 1.5;">
+  Unleash your creativity this Lunar New Year by designing your family’s very own Fancy Pony! Kiddos and families are invited to submit colorful letter-sized pony drawings full of imagination and festive spirit. Selected designs will be printed onto paper bags, ready for you to decorate at our special station. After adding your unique touch, showcase your masterpiece on the “Pony Parade Wall” and snap a photo to remember the moment. Let’s fill the celebration with color, fun, and your amazing ideas — submit your artwork today!
+</p>
 
     <form id="form" class="grid" novalidate>
       <div class="field">
